--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -268,7 +268,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Gomoku-web/Gomoku.html"
+export_path="../Gomoku-web/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
